WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106778
Web Inspector: devtools front-end doesn't have focus in TestShell
https://bugs.webkit.org/show_bug.cgi?id=106778
Summary
Web Inspector: devtools front-end doesn't have focus in TestShell
Andrey Lushnikov
Reported
2013-01-14 04:20:31 PST
Devtools front-end doesn't have focus in TestShell. As a result, simulated text-input events doesn't hit it.
Attachments
Patch
(1.85 KB, patch)
2013-01-14 04:22 PST
,
Andrey Lushnikov
no flags
Details
Formatted Diff
Diff
Patch
(1.39 KB, patch)
2013-01-14 06:54 PST
,
Andrey Lushnikov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andrey Lushnikov
Comment 1
2013-01-14 04:22:26 PST
Created
attachment 182544
[details]
Patch
Yury Semikhatsky
Comment 2
2013-01-14 04:29:27 PST
Comment on
attachment 182544
[details]
Patch Does it work for non-Chromium platforms?
Andrey Lushnikov
Comment 3
2013-01-14 06:39:23 PST
It works everywhere except mac:
https://bugs.webkit.org/show_bug.cgi?id=106780
But mac doesn't have eventSender at all:
https://bugs.webkit.org/show_bug.cgi?id=106450
Andrey Lushnikov
Comment 4
2013-01-14 06:54:25 PST
Created
attachment 182569
[details]
Patch
WebKit Review Bot
Comment 5
2013-01-14 07:26:22 PST
Comment on
attachment 182569
[details]
Patch Clearing flags on attachment: 182569 Committed
r139613
: <
http://trac.webkit.org/changeset/139613
>
WebKit Review Bot
Comment 6
2013-01-14 07:26:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug