Web Inspector: devtools front-end doesn't have focus in TestShell https://bugs.webkit.org/show_bug.cgi?id=106778

Patch by Andrey Lushnikov <lushnikov@chromium.org> on 2013-01-14
Reviewed by Pavel Feldman.

Focus devTools window after loadURL method.

* DumpRenderTree/chromium/TestShell.cpp:
(TestShell::runFileTest):

Canonical link: https://commits.webkit.org/125020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139613 268f45cc-cd09-0410-ab3c-d52691b4dbfc